--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=subbu123@
 # JPA property settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
+
+
+#apply date
+spring.jackson.serialization.write-dates-as-timestamps=false  
